--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-prefect>=3.0.1
-prefect-docker>=0.4.0
-prefect-kubernetes>=0.3.1
+prefect>=3.0.3
+prefect-docker>=0.6.1
+prefect-kubernetes>=0.5.0
 tensorflow==2.17
 scikit-learn==1.5.1
 imbalanced-learn==0.12.3
 matplotlib==3.9.2
-opencv-python-headless==4.10.0.84
-mlflow==2.16.0
+plotly==5.24.1
+seaborn==0.13.2
+mlflow==2.16.2
+azureml-mlflow==1.57.0.post1
+aim==3.24.0
